* [Bug 1567] from 4.2.6p3-RC3: Support Arbiter 1093C Satellite Clock on
  Windows.
* [Bug 1659] from 4.2.6p3-RC3: Support Truetime Satellite Clocks on
  Windows. 
* [Bug 1660] from 4.2.6p3-RC3: On some systems, test is in /usr/bin, not
  /bin. 
* [Bug 1661] from 4.2.6p3-RC3: Re-indent refclock_ripencc.c.
(4.2.7p61) 2010/10/06 Released by Harlan Stenn <stenn@ntp.org>
* Documentation and code cleanup from Dave Mills. No more NTP_MAXASSOC.
(4.2.7p60) 2010/10/04 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p59) 2010/10/02 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Variable name cleanup from Dave Mills.
* [Bug 1657] darwin needs res_9_init, not res_init.
(4.2.7p58) 2010/09/30 Released by Harlan Stenn <stenn@ntp.org>
* Clock select bugfix from Dave Mills.
* [Bug 1554] peer may stay selected as system peer after becoming
  unreachable.
* [Bug 1644] from 4.2.6p3-RC3: cvo.sh should use lsb_release to identify
  linux distros.
* [Bug 1646] ntpd crashes with relative path to logfile.
(4.2.7p57) 2010/09/27 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p56) 2010/09/25 Released by Harlan Stenn <stenn@ntp.org>
* Clock combining algorithm improvements from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1642] ntpdsim can't find simulate block in config file.
* [Bug 1643] from 4.2.6p3-RC3: Range-check the decoding of the RIPE-NCC
  status codes.
(4.2.7p55) 2010/09/22 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* [Bug 1636] from 4.2.6p3-RC2: segfault after denied remote config.
(4.2.7p54) 2010/09/21 Released by Harlan Stenn <stenn@ntp.org>
* More Initial convergence improvements from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1635] from 4.2.6p3-RC2: "filegen ... enable" is not default.
(4.2.7p53) 2010/09/20 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.